# A-OS

./: .gitignore  BUILD_COMMANDS.md  BUILD_MSYS2.md  BUILD_STATUS.md  CMakeLists.txt  QUICKSTART.md  README.md  buildCommand.txt
.claude/: settings.local.json
docs/: APPS.md  ARCHITECTURE.md  AUDIO_SETUP.md  CODING_RULES.md  INDEX.md  OBJECTIVES.md  PROJECT_SPEC.md
src/: main.cpp
src/apps/: camera_app.cpp  camera_app.h  flappy_app.cpp  flappy_app.h  home_app.cpp  home_app.h  media_app.cpp  media_app.h  settings_app.cpp  settings_app.h  sysinfo_app.cpp  sysinfo_app.h
src/hal/: audio_manager.cpp  audio_manager.h  input_manager.cpp  input_manager.h
src/os/: app.h  app_manager.cpp  app_manager.h  event_bus.cpp  event_bus.h  os_core.cpp  os_core.h
src/ui/: renderer.cpp  renderer.h
